Added support for UNION sql operator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(query,bigquery)
 S3method(sql_escape_ident,bigquery)
 S3method(sql_escape_string,bigquery)
 S3method(sql_select,bigquery)
+S3method(sql_set_op,bigquery)
 S3method(sql_subquery,bigquery)
 S3method(src_desc,src_bigquery)
 S3method(src_translate_env,src_bigquery)
@@ -86,6 +87,7 @@ importFrom(dplyr,query)
 importFrom(dplyr,sql_escape_ident)
 importFrom(dplyr,sql_escape_string)
 importFrom(dplyr,sql_select)
+importFrom(dplyr,sql_set_op)
 importFrom(dplyr,sql_subquery)
 importFrom(dplyr,src_desc)
 importFrom(dplyr,src_translate_env)
