--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,12 @@ S3method(src_translate_env,src_bigquery)
 S3method(tbl,src_bigquery)
 export(copy_table)
 export(delete_table)
+export(extract_exec)
 export(get_access_cred)
 export(get_job)
 export(get_table)
+export(insert_extract_job)
+export(insert_load_job)
 export(insert_query_job)
 export(insert_upload_job)
 export(list_datasets)
@@ -27,6 +30,7 @@ export(list_projects)
 export(list_tabledata)
 export(list_tabledata_callback)
 export(list_tables)
+export(load_exec)
 export(parse_dataset)
 export(parse_table)
 export(query_exec)
